# ireland-rent-aggregator

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
infra/alertmanager/: alertmanager.yml
infra/docker/: docker-compose.yml
infra/grafana/dashboards/: pipeline_overview.json  scraping_status.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: prometheus.yml
infra/prometheus/: prometheus.yml
infra/prometheus/rules/: alerts.yml
scripts/: daft_cookie_login.py  property_cookie_login.py
scripts/db/: init_schema.sql
services/bot/: __main__.py  message_manager.py  validation.py
services/bot/handlers/: _callback_helpers.py  _callbacks_access.py  _callbacks_part2.py  _callbacks_part3.py  _callbacks_part4.py  _callbacks_users.py  browse.py  callbacks.py  commands.py  digest.py  onboard.py  settings.py  show_latest.py  stats.py
services/bot/middleware/: auth.py
services/bot/queries/: city_stats.py  favorites.py  filters.py  hidden.py  listings.py
services/collector/: __main__.py  anomaly_detection.py  circuit_breaker.py  jsonld_extractor.py  network_capture.py  runner.py  sanitize.py  session_manager.py  session_store.py  throttle.py  uc_driver.py
services/collector/adapters/: __init__.py  daft.py  dng.py  myhome.py  property_ie.py  rent.py  sherryfitz.py
services/dedup/: __main__.py  exact.py  linker.py  scheduler.py
services/maintenance/: __main__.py  retention.py
services/normalizer/: __init__.py  __main__.py  change_detector.py  city_synonyms.py  county_filter.py  normalize.py  validators.py
services/notifier/: __main__.py  deliver.py  delivery_mode.py  digest_scheduler.py  outbox_enqueue.py  outbox_worker.py  rate_limit.py
services/publisher/: __init__.py  __main__.py  change_router.py  event_outbox.py  metrics.py  pub_sync.py  sync.py  watermark.py
services/rules/: __init__.py  apply_rules.py  exclusions.py  subscription_filters.py
services/rules/keywords/: exclusions.py
services/scheduler/: __main__.py  job_state.py  retries.py  schedule_jobs.py
tests/: __init__.py
tests/contract/: test_onboard.py
tests/fixtures/: test_scraper_fixtures.py
tests/integration/: __init__.py  test_bot_queries.py  test_db_population.py  test_delivery_flow.py  test_digest_flow.py  test_normalization_pipeline.py  test_pipeline_e2e.py  test_publisher.py  test_publisher_sync.py  test_scraper_live.py
tests/unit/: __init__.py  test_bug_fixes_regression.py  test_change_detector.py  test_city_synonyms.py  test_collector.py  test_dedup_exact.py  test_dedup_linking.py  test_digest_schedule.py  test_exclusions.py  test_metrics_facade.py  test_normalization_pipeline.py  test_outbox_idempotency.py  test_outbox_state_machine.py  test_parse_city.py  test_placeholder.py  test_publisher_sync.py  test_sanitize.py  test_subscription_filters.py  test_throttle.py  test_union_find.py  test_validators.py
